--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "seeder.js",
   "type": "module",
   "scripts": {
+    "build": "webpack --config webpack.config.js",
     "start": "node backend/server",
     "server": "nodemon server"
   },
